--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Lexend:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-      body { font-family: 'Inter', sans-serif; }
+      body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; background-color: #020617; }
       h1, h2, h3, h4 { font-family: 'Lexend', sans-serif; }
-      .gradient-bg {
-        background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
-      }
       .card-glass {
         background: rgba(255, 255, 255, 0.03);
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(12px);
         border: 1px solid rgba(255, 255, 255, 0.1);
       }
+      #root { min-height: 100vh; }
     </style>
 <script type="importmap">
 {
@@ -27,13 +25,33 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.48.1"
   }
 }
 </script>
+<script>
+  /**
+   * ENVIRONMENT CONFIGURATION
+   * These values allow the application to connect to your Supabase project.
+   */
+  window.process = { 
+    env: { 
+      SUPABASE_URL: "https://raeturpbgqmamdtsnuph.supabase.co", 
+      SUPABASE_ANON_KEY: "sb_publishable_3JZYy4tdhJBf1qd_xtU2lg_8_qGnEDn" 
+    } 
+  };
+</script>
 </head>
-<body class="bg-slate-950 text-slate-200 antialiased">
-    <div id="root"></div>
+<body class="text-slate-200 antialiased">
+    <div id="root">
+      <div style="display: flex; height: 100vh; width: 100%; align-items: center; justify-content: center; color: #64748b; font-family: sans-serif; background: #020617;">
+        <div style="text-align: center;">
+          <div style="width: 48px; height: 48px; border: 4px solid rgba(16, 185, 129, 0.1); border-top-color: #10b981; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 24px;"></div>
+          <p style="font-weight: 600; letter-spacing: 0.05em; color: #94a3b8;">LAUNCHING PLATFORM...</p>
+        </div>
+      </div>
+    </div>
+    <style>@keyframes spin { to { transform: rotate(360deg); } }</style>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
