--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
   /**
    * SUPABASE CONFIGURATION
    * We initialize window.process to support environment variables.
-   * On Vercel, these are injected automatically if you set them in the dashboard.
+   * The key is now hardcoded to bypass the login screen.
    */
   window.process = { 
     env: { 
       SUPABASE_URL: "https://raeturpbgqmamdtsnuph.supabase.co", 
-      // Replace the string below with your REAL 'anon' key from Supabase Settings > API
-      // Or better: Set 'SUPABASE_ANON_KEY' in your Vercel Project Settings
-      SUPABASE_ANON_KEY: "" 
+      SUPABASE_ANON_KEY: "sb_publishable_3JZYy4tdhJBf1qd_xtU2Ig_8_qGnEDn" 
     } 
   };
 </script>
